--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: springapp
     image: hacker123shiva/springboot-app
     restart: always
-    build: .
+    # build: .
     ports:
       - '9000:9000'
     environment:
